--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "start": "node dist/server.js",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
@@ -19,11 +19,15 @@
     "@fastify/autoload": "^6.3.1",
     "@fastify/cors": "^11.2.0",
     "@fastify/env": "^5.0.3",
+    "@fastify/formbody": "^8.0.2",
+    "@fastify/secure-session": "^8.3.0",
     "@fastify/sensible": "^6.0.4",
     "@fastify/static": "^9.0.0",
     "@fastify/type-provider-typebox": "^6.1.0",
     "@fastify/view": "^11.1.1",
+    "@fastify/websocket": "^11.2.0",
     "@sinclair/typebox": "^0.34.47",
+    "argon2": "^0.44.0",
     "bullmq": "^5.66.5",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
@@ -41,6 +45,7 @@
     "eslint-config-prettier": "^10.1.8",
     "pino-pretty": "^13.1.3",
     "prettier": "^3.7.4",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.52.0"
