--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,24 @@
+# Server Configuration
 NODE_ENV=development
 PORT=3000
-DATABASE_URL=postgres://postgres:password@localhost:5432/wa_gateway
+DATABASE_URL=postgres://user:password@localhost:5432/wa_gateway
 REDIS_HOST=localhost
 REDIS_PORT=6379
+
+# WhatsApp Queue Configuration
+WA_QUEUE_NAME=wa-sending-queue
+WA_QUEUE_ATTEMPTS=3
+WA_QUEUE_BACKOFF_DELAY=1000
+WA_QUEUE_REMOVE_ON_COMPLETE=100
+WA_QUEUE_REMOVE_ON_FAIL=500
+
+# Baileys Configuration
+WA_PRINT_QR_TERMINAL=false
+WA_SYNC_FULL_HISTORY=false
+WA_BROWSER_TYPE=ubuntu # Possible values: 'ubuntu', 'macOS', 'baileys', 'windows', or 'appropriate'.
+WA_BROWSER_NAME=Chrome
+WA_QR_TIMEOUT=20000 # QR code timeout in milliseconds
+WA_DELAY_MIN_MS=2000 # Minimum delay between messages in milliseconds
+WA_DELAY_MAX_MS=10000 # Maximum delay between messages in milliseconds
+WA_TYPING_MIN_MS=1000 # Minimum typing simulation time in milliseconds
+WA_TYPING_MAX_MS=3000 # Maximum typing simulation time in milliseconds
