--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fastify/view": "^11.1.1",
     "@fastify/websocket": "^11.2.0",
     "@sinclair/typebox": "^0.34.47",
+    "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "argon2": "^0.44.0",
     "bullmq": "^5.66.5",
     "dotenv": "^17.2.3",
@@ -35,11 +36,14 @@
     "fastify": "^5.6.2",
     "fastify-plugin": "^5.1.0",
     "ioredis": "^5.9.1",
-    "postgres": "^3.4.8"
+    "postgres": "^3.4.8",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
     "@types/node": "^25.0.6",
+    "@types/qrcode": "^1.5.6",
+    "@types/ws": "^8.18.1",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
