--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node dist/server.js",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
+    "db:migrate:prod": "tsx ./scripts/migrate.ts",
     "format": "prettier --write . && eslint --fix ."
   },
   "keywords": [],
