--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
 # Server Configuration
 NODE_ENV=development
 PORT=3000
-DATABASE_URL=postgres://user:password@localhost:5432/wa_gateway
-REDIS_HOST=localhost
+DATABASE_URL=postgres://user:password@postgres:5432/wa_gateway
+REDIS_HOST=redis
 REDIS_PORT=6379
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=wa_gateway
+
 
 # WhatsApp Queue Configuration
 WA_QUEUE_NAME=wa-sending-queue
