--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "docker:prod": "docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d",
     "docker:prod:down": "docker compose -f docker-compose.yml -f docker-compose.prod.yml down",
     "docker:prod:logs": "docker compose -f docker-compose.yml -f docker-compose.prod.yml logs -f app",
-    "docker:prod:seed": "docker compose -f docker-compose.yml -f docker-compose.prod.yml exec app node --loader tsx ./scripts/seed.ts"
+    "docker:prod:seed": "docker compose -f docker-compose.yml -f docker-compose.prod.yml exec app npm run db:seed"
   },
   "keywords": [],
   "author": "",
@@ -40,6 +40,7 @@
     "argon2": "^0.44.0",
     "bullmq": "^5.66.5",
     "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
     "ejs": "^3.1.10",
     "fastify": "^5.6.2",
@@ -53,7 +54,6 @@
     "@types/node": "^25.0.6",
     "@types/qrcode": "^1.5.6",
     "@types/ws": "^8.18.1",
-    "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "pino-pretty": "^13.1.3",
