--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start": "node dist/server.js",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:migrate:prod": "tsx ./scripts/migrate.ts",
     "db:seed": "tsx ./scripts/seed.ts",
     "format": "prettier --write . && eslint --fix .",
     "docker:dev": "docker compose -f docker-compose.yml -f docker-compose.dev.yml up -d",
@@ -47,7 +46,8 @@
     "fastify-plugin": "^5.1.0",
     "ioredis": "^5.9.1",
     "postgres": "^3.4.8",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
@@ -59,7 +59,6 @@
     "pino-pretty": "^13.1.3",
     "prettier": "^3.7.4",
     "tsc-alias": "^1.8.16",
-    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.52.0"
   }
