--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
+# docker-compose.yml
 services:
-  # Main Application (Fastify)
   app:
     build: .
     container_name: wa-gateway-app
@@ -14,8 +14,13 @@ services:
         condition: service_healthy
     networks:
       - wa-network
+    # Resource limit
+    deploy:
+      resources:
+        limits:
+          cpus: '0.80'
+          memory: 600M
 
-  # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
     container_name: wa-gateway-db
@@ -27,14 +32,18 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER:-user}']
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-user}"]
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
       - wa-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 512M
 
-  # Redis Queue
   redis:
     image: redis:7-alpine
     container_name: wa-gateway-redis
@@ -42,12 +51,17 @@ services:
     volumes:
       - redisdata:/data
     healthcheck:
-      test: ['CMD', 'redis-cli', 'ping']
+      test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
       - wa-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.20'
+          memory: 128M
 
 volumes:
   pgdata:
